--- a/index.html
+++ b/index.html
@@ -69,17 +69,17 @@ http://www.templatemo.com/tm-508-power
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <div class="banner-content">
-                            <h6>Designed With Love</h6>
-                            <h2>The Power Theme</h2>
+                            <h6>Join us for the very first</h6>
+                            <h2>Pi Wars Turkey</h2>
                             <ul class="buttons">
                                 <li>
                                     <div class="primary-button">
-                                        <a href="#about">Download Now</a>
+                                        <a href="#about">About Us</a>
                                     </div>
                                 </li>
                                 <li>
                                     <div class="secondary-button">
-                                        <a href="#portfolio">More Details</a>
+                                        <a href="#portfolio">Register Now</a>
                                     </div>
                                 </li>
                             </ul>
