--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ http://www.templatemo.com/tm-508-power
                                         <a href="#unique" class="active">
                                             <div class="list-item">
                                                 <div class="icon">
-                                                    <img src="img/first-list-icon.png" alt="">
+                                                    <img src="img/noun_Balloon_689828.png" alt="">
                                                 </div>
                                                 <h4>PiNoon</h4>
                                             </div>
