--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ http://www.templatemo.com/tm-508-power
                                             <span class="icon-bar"></span>
                                             <span class="icon-bar"></span>
                                         </button>
-                                        <a href="#top" class="navbar-brand" >PiWars Turkey</a>
+                                        <a href="#top" class="navbar-brand" >PiWars Turkey</a> <!--Üstteki barın yazdıklarını editler-->
                                         <div id="main-nav" class="collapse navbar-collapse">
                                             <ul class="menu-first nav navbar-nav" style="margin-right: 20px;">
                                                 <li class="active"><a href="#">Ana Sayfa</a></li>
