--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ http://www.templatemo.com/tm-508-power
                                         <a href="#unique" class="active">
                                             <div class="list-item">
                                                 <div class="icon">
-                                                    <img src="img/deneme.png" alt=""> <!-- PiNoon resmi -->
+                                                    <img src="img/deneme2.png" alt=""> <!-- PiNoon resmi -->
                                                 </div>
                                                 <h4>PiNoon</h4>
                                             </div>
