--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@ http://www.templatemo.com/tm-508-power
 
     </head>
     <body>
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdnx0D7M4aSzJtWeZqDmiaebGm5DJePNZBqpI9E5zWKM1XUmQ/viewform?embedded=true" width="640" height="1195" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
         <![endif]-->
@@ -420,40 +419,10 @@ http://www.templatemo.com/tm-508-power
                 </div>
                 <div class="row">
                     <div class="col-md-6">
-                        <form id="contact" action="#" method="post">
-                            <div class="row">
-                                <div class="col-md-6">
-                                  <fieldset>
-                                    <input name="name" type="text" class="form-control" id="name" placeholder="Name..." required="">
-                                  </fieldset>
-                                </div>
-                                <div class="col-md-6">
-                                  <fieldset>
-                                    <input name="email" type="email" class="form-control" id="email" placeholder="Email..." required="">
-                                  </fieldset>
-                                </div>
-                                 <div class="col-md-6">
-                                  <fieldset>
-                                    <input name="subject" type="text" class="form-control" id="subject" placeholder="Subject..." required="">
-                                  </fieldset>
-                                </div>
-                                <div class="col-md-6">
-                                  <fieldset>
-                                    <input name="phone" type="phone" class="form-control" id="phone" placeholder="Phone..." required="">
-                                  </fieldset>
-                                </div>
-                                <div class="col-md-12">
-                                  <fieldset>
-                                    <textarea name="message" rows="6" class="form-control" id="message" placeholder="Message..." required=""></textarea>
-                                  </fieldset>
-                                </div>
-                                <div class="col-md-12">
-                                  <fieldset>
-                                    <button type="submit" id="form-submit" class="btn">Send your message</button>
-                                  </fieldset>
-                                </div>
-                            </div>
-                        </form>
+                       <!-- google form test alanı-->
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdnx0D7M4aSzJtWeZqDmiaebGm5DJePNZBqpI9E5zWKM1XUmQ/viewform?embedded=true" width="600" height="450" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+
+
                     </div>
                     <div class="col-md-6">
                         <div id="map">
