--- a/Pinoon.html
+++ b/Pinoon.html
@@ -51,3 +51,7 @@
                 </div> <!-- /.main-header -->
             </div> <!-- /.site-header -->
         </div> <!-- /.site-main -->
+
+
+        <title> Pi Noon – the Robot vs Robot Duel </title>
+
