--- a/Pinoon.html
+++ b/Pinoon.html
@@ -56,3 +56,7 @@
         <title> Pi Noon – the Robot vs Robot Duel </title>
         <img src="img/first-service-icon.png" alt="">
 
+   
+    </body>
+</html>
+
