--- a/Pinoon.html
+++ b/Pinoon.html
@@ -53,10 +53,39 @@
         </div> <!-- /.site-main -->
 
 
-        <title> Pi Noon – the Robot vs Robot Duel </title>
-        <img src="img/first-service-icon.png" alt="">
+        <h1> Balon Savaşı </h1>
+        <img class="size-full wp-image-4406" src="img/balonsavaşı.jpg" alt="" width="640" height="480" sizes="(max-width: 640px) 100vw, 640px">
+        <h2> Görevin amacı </h2>
+        <ul><li> Rakip takımınızın balonlarını patlatmak</li></ul>
 
+        <h2> Kontrol Methodu </h2>
+        <ul><li> Uzaktan kumandalı </li></ul>
    
+        <h2> Süre </h2>
+        <ul><li> Her düello başına 3 dakika </li></ul>
+
+        <h2> Kurallar </h2>
+        <ul>
+            <li> İki robot, operatörün sürüş becerilerini ve robotun manevra kabiliyetini test edecek tahribatsız bir düelloda birbirleriyle karşı karşıya gelecek. </li>
+            <li> Karşı takımın robotuna takılan balonları patlatmak için, robotlara takılan metal telin ucundaki iğneler kullanılmalıdır. </li>
+            <li> Duellolar, robotların sahayı terk etmesini engellemek için, etrafı kısa duvarlarla çevrili bir arenada yapılacaktır. </li>
+            <li> Yarışmacılar arenaya hiç bir zamanda giremezler. Kablo bağlantılarıyla ilgili herhangi bir işlem için robotların sahanın kenarlarına sürülmesi gerekir. Arenaya girmenin sonuçlarında düellonun kaybedilmesi durumu olabilir. </li>
+            <li> Kasıtlı olarak olduğunuz yerde dönemezsinz, eğer hakem bunu yaptığınız hissine kapılırsa size bir uyarı verecektir. İkinci bir uyarı alınması durumunda takımınız malup sayılıcaktır. </li>
+            <li> Eğer 3 dakikanın sonunda, herhangi bir robot galip gelmezse, kararı, kontrol ve agresifliği değerlendiren oyun hakemi verecektir. </li>
+            <li> Başka bir robota verilen kasıtlı zarar, diskalifiyeye sebep olur. Zarar vermemeye özen göstermek, robotların sürücülerinin görevi. </li>
+            <li> Hakemin kararı sondur. </li>
+                <ul>
+                    <li>Lütfen tarışmayın - unutmayın, bu yarışmaların eğlenceli olması gerekiyor. </li>
+                    <li>Takımınızdan birinin duelloyu kayıt etmesi (bir telefonla olabilir) tavsiye edilir. Bu sayede, hakem görsel kanıtlardan yararlanabilir. 
+</li>
+                </ul>
+            <li> Yarışmacı sayısından dolayı, bazı robotlar bir sonraki tura veda etmek durumunda kalabilir. Bu robotlar rastgele seçilecek ve yarışmadan önce açıklanacak. </li>
+        </ul>
+
+
+
+        
+
     </body>
 </html>
 
