--- a/Pinoon.html
+++ b/Pinoon.html
@@ -36,7 +36,7 @@
                                         <a href="#top" class="navbar-brand" >PiWars Turkey</a> <!--Üstteki barın yazdıklarını editler-->
                                         <div id="main-nav" class="collapse navbar-collapse">
                                             <ul class="menu-first nav navbar-nav" style="margin-right: 20px;">
-                                                <li class="active"><a href="#">Ana Sayfa</a></li>
+                                                <li class="active"><a href="index.html#">Ana Sayfa</a></li>
                                                 <li><a href="index.html#about">Yarışma Hakkında</a></li>
                                                 <li><a href="index.html#sponsor">Ödül ve Sponsorlar</a></li>
                                                 <li><a href="index.html#contact-us">Başvur</a></li> 
@@ -84,7 +84,7 @@
 
 
 
-        
+
 
     </body>
 </html>
