--- a/Pinoon.html
+++ b/Pinoon.html
@@ -52,9 +52,10 @@
             </div> <!-- /.site-header -->
         </div> <!-- /.site-main -->
 
-<section id="about" class="page-section">
+<section id="ContentOfPinoon" class="page-section">
             <!--<div class="container-fluid">-->
                 <div class="row"> 
+                    <div class="service-item first-service">
                         <h1> Balon Savaşı </h1>
                         <img class="size-full wp-image-4406" src="img/balonsavaşı.jpg" alt="" width="640" height="480" sizes="(max-width: 640px) 100vw, 640px">
                         <h2> Görevin amacı </h2>
