Made pretty faq blocksfor questions

--- a/index.html
+++ b/index.html
@@ -516,34 +516,27 @@ http://www.templatemo.com/tm-508-power
         	<div class= "container">
                 <div class = "row">
                 	<div class="section-heading">
-                		<h1 style="color:rgb(0,187,229);
+                		<h1 style="color: #00bbe5;
                 		text-align: left"><b>Sık Sorulan Sorular</b><h1>
                 				<div class="col-md-6">
-                						<div class="dropdown">
-                							<button class="dropbtn">Yoel</button>
-                							<div class="dropdown-content">
-                								<p>Evet.</p>
-                							</div>
+                						<div class="faqBlock">
+                							<span class="question" style="color:#363e50">Deneme</span>
+                                            <span class="answer" style="color:#363e50">Yanılma</span>
                 						</div>
-                						<div class="dropdown">
-                							<button class="dropbtn">Yoel çok</button>
-                							<div class="dropdown-content">
-                								<p>Evet.</p>
-                							</div>
-                						</div>
+                                        <div class="faqBlock">
+                                            <span class="question" style="color:#363e50">Deneme</span>
+                                            <span class="answer" style="color:#363e50">Yanılma</span>
+                                        </div>
                 				</div>
                 				<div class="col-md-6">
-                					<div class="dropdown">
-                						<button class="dropbtn">Yoel çok mu iyi?</button>
-                							<div class="dropdown-content">
-                								<p>Evet.</p>
-                							</div>
-                					</div>
-                					<div class="dropdown">
-                							<button class="dropbtn">Yoel çok çok çok çok mu iyi?</button>
-                							<div class="dropdown-content">
-                								<p>Evet.</p>
-                							</div>
+                					<div class="faqBlock">
+                                            <span class="question" style="color:#363e50">Deneme</span>
+                                            <span class="answer" style="color:#363e50">Yanılma</span>
+                                        </div>
+                                        <div class="faqBlock">
+                                            <span class="question" style="color:#363e50">Deneme</span>
+                                            <span class="answer" style="color:#363e50">Yanılma</span>
+                                        </div>
                 			</div>
                 	</div>
                 </div>
