--- a/index.html
+++ b/index.html
@@ -549,6 +549,113 @@ http://www.templatemo.com/tm-508-power
             </div>
         </section>
 
+        <section id="bizkimiz">
+            <h2>Biz Kimiz?</h2>
+            <div class="sira1">
+ 			 <div class="foto">
+    			<img src="img/blog-post-3.jpg" alt="Snow" style="width:100%" class="image">
+    			<div class="foto-layer_top">
+                  <div class="text">Merhaba. Benim adım Can.</div>
+                </div>
+                <center><font size="4">Emre</font></center>
+                <center>CEO</center>
+  			 </div>
+  			 <div class="foto">
+   				<img src="img/blog-post-3.jpg" alt="Snow" style="width:100%" class="image">
+   				<div class="foto-layer_top">
+                  <div class="text">Merhaba. Benim adım Emre.</div>
+                </div>
+                <center><font size="4">Emre</font></center>
+                <center>CEO</center>
+  			 </div>
+  			 <div class="foto">
+   				<img src="img/blog-post-3.jpg" alt="Snow" style="width:100%" class="image">
+   				<div class="foto-layer_top">
+                  <div class="text">Merhaba. Benim adım Emre.</div>
+                </div>
+                <center><font size="4">Emre</font></center>
+                <center>CEO</center>
+  			 </div>
+  			 <div class="foto">
+    			<img src="img/blog-post-3.jpg" alt="Snow" style="width:100%" class="image">
+    			<div class="foto-layer_top">
+                  <div class="text">Merhaba. Benim adım Can.</div>
+                </div>
+                <center><font size="4">Emre</font></center>
+                <center>CEO</center>
+  			 </div>
+  			 
+			</div>
+			<div class="sira1">
+ 			 <div class="foto">
+    			<img src="img/blog-post-3.jpg" alt="Snow" style="width:100%" class="image">
+    			<div class="foto-layer_top">
+                  <div class="text">Merhaba. Benim adım Can.</div>
+                </div>
+                <center><font size="4">Emre</font></center>
+                <center>CEO</center>
+  			 </div>
+  			 <div class="foto">
+   				<img src="img/blog-post-3.jpg" alt="Forest" style="width:100%" class="image">
+   				<div class="foto-layer_top">
+                  <div class="text">Merhaba. Benim adım Emre.</div>
+                </div>
+                <center><font size="4">Emre</font></center>
+                <center>CEO</center>
+  			 </div>
+  			 <div class="foto">
+    			<img src="img/blog-post-3.jpg" alt="Mountains" style="width:100%" class="image">
+    			<div class="foto-layer_top">
+                  <div class="text">Merhaba. Benim adım Batuhan.</div>
+                </div>
+                <center><font size="4">Emre</font></center>
+                <center>CEO</center>
+  			 </div>
+  			 <div class="foto">
+    			<img src="img/blog-post-3.jpg" alt="Snow" style="width:100%" class="image">
+    			<div class="foto-layer_top">
+                  <div class="text">Merhaba. Benim adım Can.</div>
+                </div>
+                <center><font size="4">Emre</font></center>
+                <center>CEO</center>
+  			 </div>
+			</div>
+			<div class="sira1">
+ 			 <div class="foto">
+    			<img src="img/blog-post-3.jpg" alt="Snow" style="width:100%" class="image">
+    			<div class="foto-layer_top">
+                  <div class="text">Merhaba. Benim adım Can.</div>
+                </div>
+                <center><font size="4">Emre</font></center>
+                <center>CEO</center>
+  			 </div>
+  			 <div class="foto">
+   				<img src="img/blog-post-3.jpg" alt="Forest" style="width:100%" class="image">
+   				<div class="foto-layer_top">
+                  <div class="text">Merhaba. Benim adım Emre.</div>
+                </div>
+                <center><font size="4">Emre</font></center>
+                <center>CEO</center>
+  			 </div>
+  			 <div class="foto">
+    			<img src="img/blog-post-3.jpg" alt="Mountains" style="width:100%" class="image">
+    			<div class="foto-layer_top">
+                  <div class="text">Merhaba. Benim adım Batuhan.</div>
+                </div>
+                <center><font size="4">Emre</font></center>
+                <center>CEO</center>
+  			 </div>
+  			   			 <div class="foto">
+    			<img src="img/blog-post-3.jpg" alt="Snow" style="width:100%" class="image">
+    			<div class="foto-layer_top">
+                  <div class="text">Merhaba. Benim adım Can.</div>
+                </div>
+                <center><font size="4">Emre</font></center>
+                <center>CEO</center>
+  			 </div>
+		  </div>
+        </section>
+
 <!--______________________________________________________________________________________________-->
 
 
