--- a/index.html
+++ b/index.html
@@ -549,8 +549,8 @@ http://www.templatemo.com/tm-508-power
             </div>
         </section>
 
-        <section id="bizkimiz">
-            <h2>Biz Kimiz?</h2>
+        <section id="bizkimiz" style="margin-right: 150px; margin-left: 150px;margin-bottom: 75px">
+            <h2 style="text-align: center;margin-bottom: 50px;font-size: 35px; color: red">Biz Kimiz?</h2>
             <div class="sira1">
  			 <div class="foto">
     			<img src="img/blog-post-3.jpg" alt="Snow" style="width:100%" class="image">
