--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ http://www.templatemo.com/tm-508-power
         <link rel="stylesheet" href="css/templatemo_misc.css">
         <link rel="stylesheet" href="css/templatemo_style.css">
         <link rel="stylesheet" href="css/owl-carousel.css">
-        <link rel="stylesheet" type="text/css" href="style.css"> 
+        <link rel="stylesheet" type="text/css" href="css/style.css"> 
         <script src="js/vendor/modernizr-2.6.1-respond-1.1.0.min.js"></script> 
 
     </head>
@@ -195,7 +195,7 @@ http://www.templatemo.com/tm-508-power
                             <h4>Yarışmalar</h4>
                             <p>PiWars etkinliğinde hem otonom hem de uzaktan kumandalı görever bulunur. PiWars Türkiye etkinliği için seçtiğimiz görevleri ve kurallarını aşağıda görebilirsiniz. </p>
                             <div class="primary-button">
-                                <a href="GenelKurallar.html" target="_parent" rel="nofollow">Genel Kurallar ve kısıtlamalar</a> <!-- Genel kuralların yazılması gerekilen site -->
+                                <a href="htemel/GenelKurallar.html" target="_parent" rel="nofollow">Genel Kurallar ve kısıtlamalar</a> <!-- Genel kuralların yazılması gerekilen site -->
                             </div>
                         </div>
                     </div>
@@ -268,7 +268,7 @@ http://www.templatemo.com/tm-508-power
                                                     <h4>PiNoon</h4>
                                                     <p>Pinoon, iki robotun birbirleriyle savaştığı interaktif bir yarışmadır. Amaç diğer robota bağlı balonu, kendi robotunuzdaki iğne ile patlatmaktır.  </p>
                                                     <div class="primary-button">
-                                                        <a href="Pinoon.html" target="_parent" rel="nofollow">Detaylı bilgi ve Kurallar</a>
+                                                        <a href="htemel/Pinoon.html" target="_parent" rel="nofollow">Detaylı bilgi ve Kurallar</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -290,7 +290,7 @@ http://www.templatemo.com/tm-508-power
                                                     <h4>Obstacle Course</h4>
                                                     <p>Obstacle course'ta robotunuz engebeli bir parkurdan geçmeye çalışır. Bu parkuru en kısa zamanda tamamlayan en çok puan kazanır. </p>
                                                      <div class="primary-button">
-                                                        <a href="ObstacleCourse.html" target="_parent" rel="nofollow">Detaylı bilgi ve Kurallar</a>
+                                                        <a href="htemel/ObstacleCourse.html" target="_parent" rel="nofollow">Detaylı bilgi ve Kurallar</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -312,7 +312,7 @@ http://www.templatemo.com/tm-508-power
                                                     <h4>Duck Shoot</h4>
                                                     <p>Duck Shoot, karşınızdaki hedefleri bir fırlatma mekanizmasıyla vurduğunuz veya yerdeki bir topu iterek hedefleri devirmeye çalıştığınız bir yarışmadır. </p>
                                                     <div class="primary-button">
-                                                        <a href="DuckShoot.html" rel="nofollow">Detaylı bilgi ve Kurallar</a>
+                                                        <a href="htemel/DuckShoot.html" rel="nofollow">Detaylı bilgi ve Kurallar</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -334,7 +334,7 @@ http://www.templatemo.com/tm-508-power
                                                     <h4>Proximity Alert</h4>
                                                     <p>Proximity alert otonom bir görevdir, bir duvara 0.5 metre uzaklıktaki robotunuz, üzerindeki sensörlerle bu duvara çarpmadan olabildiğince yaklaşmaya çalışır. </p>
                                                     <div class="primary-button">
-                                                        <a href="ProximityAlert.html" target="_parent" rel="nofollow">Detaylı bilgi ve Kurallar</a>
+                                                        <a href="htemel/ProximityAlert.html" target="_parent" rel="nofollow">Detaylı bilgi ve Kurallar</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -356,7 +356,7 @@ http://www.templatemo.com/tm-508-power
                                                     <h4>Line Following</h4>
                                                     <p>Line Following görevinde robotunuz beyaz bir yüzey üstündeki siyah çizgiyi takip eder. Çizginin sonuna en hızlı ve üstünde kalarak tamamlayan robot 1. olur. </p>
                                                     <div class="primary-button">
-                                                        <a href="LineFollowing.html" rel="nofollow">Detaylı bilgi ve Kurallar</a>
+                                                        <a href="htemel/LineFollowing.html" rel="nofollow">Detaylı bilgi ve Kurallar</a>
                                                     </div>
 
                                                 </div>
