--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@ http://www.templatemo.com/tm-508-power
                     <div class="col-md-12">
                         <div class="section-heading">
                             <h4>Ödül!</h4>
-                            <p>Aliquam neque neque, commodo in euismod id, lobortis in lacus. Duis interdum sagittis velit, fermentum tincidunt lectus. Nam ornare turpis.</p>
+                            <p>Ödüller en kısa zamanda açıklanacaktır</p>
                         </div>
                     </div>
                 </div>
@@ -402,7 +402,10 @@ http://www.templatemo.com/tm-508-power
                     <div class="col-md-12">
                         <div class="section-heading">
                             <h4>Sponsorlar!</h4>
-                            <p>Aliquam neque neque, commodo in euismod id, lobortis in lacus. Duis interdum sagittis velit, fermentum tincidunt lectus. Nam ornare turpis.</p>
+                            <p style="padding-bottom: 10px">Sponsorlar çok yakında açıklanacaktır</p>
+                            <div class="primary-button">
+                                <a href="htemel/sponsor.html" target="_parent" rel="nofollow">PiWars’a Nasıl Sponsor Olabilirsiniz?</a> <!-- Genel kuralların yazılması gerekilen site -->
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -494,22 +497,22 @@ http://www.templatemo.com/tm-508-power
                 		<h1 style="color: #00bbe5;text-align: left"><b>Sık Sorulan Sorular</b><h1>
                 				<div class="col-md-6">
                 						<div class="faqBlock">
-                							<span class="question" style="color:#363e50">Deneme</span>
-                                            <span class="answer" style="color:#363e50">Yanılma</span>
+                							<span class="question" style="color:#363e50">Eğitime kimlerin katılması tavsiye edilmektedir?</span>
+                                            <span class="answer" style="color:#363e50">Eğitime sadece kendi robotlarını yapmak için yeterli maddi imkana sahip olmayan okulların başvurması teşvik edilmektedir. </span>
                 						</div>
                                         <div class="faqBlock">
-                                            <span class="question" style="color:#363e50">Deneme</span>
-                                            <span class="answer" style="color:#363e50">Yanılma</span>
+                                            <span class="question" style="color:#363e50">Eğitime katılmak için önceden bir robotik tecrübesine ihtiyaç var mı?</span>
+                                            <span class="answer" style="color:#363e50">Hayır, eğitimdeki herkesin hiçbir şey bilmediği varsayılacaktır. </span>
                                         </div>
                 				</div>
                 				<div class="col-md-6">
                 					<div class="faqBlock">
-                                            <span class="question" style="color:#363e50">Deneme</span>
-                                            <span class="answer" style="color:#363e50">Yanılma</span>
+                                            <span class="question" style="color:#363e50">Eğitime katılan takımlar kaçar kişiden oluşmalıdır?</span>
+                                            <span class="answer" style="color:#363e50">Bir takımın 3 kişiden oluşması hedeflenmektedir.</span>
                                         </div>
                                         <div class="faqBlock">
-                                            <span class="question" style="color:#363e50">Deneme</span>
-                                            <span class="answer" style="color:#363e50">Yanılma</span>
+                                            <span class="question" style="color:#363e50">Eğitime katılmadan sadece yarışmaya katılabilir miyim?</span>
+                                            <span class="answer" style="color:#363e50">Tabi ki! </span>
                                         </div>
                 			</div>
                 	</div>
@@ -523,7 +526,7 @@ http://www.templatemo.com/tm-508-power
                     <div class="col-md-12">
                         <div class="section-heading">
                             <h4>Başvur</h4>
-                            <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In hac habitasse platea dictumst.</p>
+                            <p>PiWars 2019 başvuru formlarına aşağıdan ulaşabilirsiniz. Eğitime katılmak isteyenlerin yarışmaya da katılmaları beklendiği için sadece eğitim formunu doldurmaları yeterlidir. Görevli öğretmen de dahil olmak üzere her takım üyesi için bir form doldurmanız gerektiğini hatırlatmak isteriz. </p>
                         </div>
                     </div>
                 </div>
