--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ http://www.templatemo.com/tm-508-power
                                         <a href="#theme">
                                             <div class="list-item">
                                                 <div class="icon">
-                                                    <img src="img/second-list-icon.png" alt="">
+                                                    <img src="img/obstaclecourse2.png" alt="">
                                                 </div>
                                                 <h4>Obstacle Course</h4>
                                             </div>
@@ -229,7 +229,7 @@ http://www.templatemo.com/tm-508-power
                                         <a href="#translation">
                                             <div class="list-item">
                                                 <div class="icon">
-                                                    <img src="img/third-list-icon.png" alt="">
+                                                    <img src="img/duckshoot2.png" alt="">
                                                 </div>
                                                 <h4>Duck Shoot</h4>
                                             </div>
@@ -239,7 +239,7 @@ http://www.templatemo.com/tm-508-power
                                         <a href="#event">
                                             <div class="list-item">
                                                 <div class="icon">
-                                                    <img src="img/fourth-list-icon.png" alt="">
+                                                    <img src="img/proxalert.png" alt="">
                                                 </div>
                                                 <h4>Proximity Alert</h4>
                                             </div>
@@ -249,7 +249,7 @@ http://www.templatemo.com/tm-508-power
                                         <a href="#photo">
                                             <div class="list-item">
                                                 <div class="icon">
-                                                    <img src="img/fivth-list-icon.png" alt="">
+                                                    <img src="img/linefollowing2.png" alt="">
                                                 </div>
                                                 <h4>Line Following</h4>
                                             </div>
