--- a/index.html
+++ b/index.html
@@ -384,9 +384,12 @@ http://www.templatemo.com/tm-508-power
                 <div class="row">
                     <div class="col-md-12">
                         <div class="section-heading">
-                            <h4>Ödül!</h4>
-                            <p>Ödüller en kısa zamanda açıklanacaktır</p>
-                        </div>
+                            <h2><font size="36" color="white">Ödüller</font></h2>
+                            <br>
+                            <img src="img/oduller2.png" alt="">
+                            <br>
+                            <br>
+                            <p><font size="6" color="white">Ödüller en kısa zamanda açıklanacaktır.</font></p>
                     </div>
                 </div>
                 
