--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@ http://www.templatemo.com/tm-508-power
                         <div class="banner-content">
                             <h6>Raspberry Pi Tabanlı Mobil Robot Yarışması</h6>
                             <h2>Pİ Wars Türkİye</h2>
+			    			<font size="8" color="white">24 Mart 2019</font>
                             <ul class="buttons">
                                 <li>
                                     <div class="primary-button">
@@ -95,9 +96,8 @@ http://www.templatemo.com/tm-508-power
         <div class="intro">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12">
-                        <h4><b>23 Mart 2019</b></h4>
-                        <h6><table class="container">
+                    <div class="col-md-12">                  
+                        <h4><table class="container">
             <tr class="info">
                 <td id="days"></td>
                 <td id="hrs"></td>
@@ -145,7 +145,7 @@ http://www.templatemo.com/tm-508-power
 
             countDown();
         </script>
-    </h6>
+    </h4>
                     </div>
                 </div>
             </div>
