--- a/index.html
+++ b/index.html
@@ -564,6 +564,7 @@ http://www.templatemo.com/tm-508-power
 
         <section id="bizkimiz" style="margin-right: 150px; margin-left: 150px;margin-bottom: 75px">
             <h2 style="text-align: center;margin-bottom: 50px;font-size: 35px; color: black">Biz Kimiz?</h2>
+			<center>Biz, Hisar Lisesinde okuyan ve Computer Science bölümüne ilgi duyan öğrencileriz.</center>
             <div class="sira1">
  			 <div class="foto">
     			<img src="img/blog-post-3.jpg" alt="Snow" style="width:100%" class="image">
