--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ http://www.templatemo.com/tm-508-power
                                 <img src="img/first-service-icon.png" alt=""> <!-- Pi Wars adlı başlığın üstündeki resim -->
                             </div>
                             <h4>Pİ Wars</h4>
-                            <p>PiWars, İngiltere Cambridge Üniversitesinde son 4 yıldır düzenlenen uluslararası bir robotik yarışmasıdır. Bu yarışmada katılımcılar Raspberry Pi kullanarak mobil robotlar üretirler. Robotlar yarışmadaki hem otonom hem de uzaktan kumandalı çeşitli görevleri tamamlayarak puan kazanır ve buna göre sıralandırılırlar.</p>
+                            <p>PiWars, İngiltere Cambridge Üniversitesinde son 4 yıldır düzenlenen uluslararası bir robotik yarışmasıdır. Bu yarışmada katılımcılar Raspberry Pi kullanarak mobil robotlar üretirler. Robotlar yarışmadaki hem otonom hem de uzaktan kumandalı çeşitli görevleri tamamlayarak puan kazanır ve buna göre sıralandırılırlar.<br><br>   </p>
 			    
                         </div>
                     </div>
@@ -173,7 +173,7 @@ http://www.templatemo.com/tm-508-power
                             </div>
                             <h4>PİWars Türkiye</h4>
                             <p>Hisar CS takımı PiWars etkinliğini İstanbul’a getirerek Türkiye'deki ilk PiWars etkinliğini düzenleyecektir. Yarışma 23 mart tarihinde Hisar Okulları lise binasında gerçekleşecek ve Türkiye çevresinden bütün liselerin katılımına açık olacaktır.
-                                <br><br><br></p></p>
+                                <br><br><br></p>
                         </div>
                     </div>
                     <div class="col-md-4">
