--- a/index.html
+++ b/index.html
@@ -162,7 +162,9 @@ http://www.templatemo.com/tm-508-power
                                 <img src="img/first-service-icon.png" alt=""> <!-- Pi Wars adlı başlığın üstündeki resim -->
                             </div>
                             <h4>Pİ Wars</h4>
-                            <p>PiWars, İngiltere Cambridge Üniversitesinde son 4 yıldır düzenlenen uluslararası bir robotik yarışmasıdır. Bu yarışmada katılımcılar Raspberry Pi kullanarak mobil robotlar üretirler. Robotlar yarışmadaki hem otonom hem de uzaktan kumandalı çeşitli görevleri tamamlayarak puan kazanır ve buna göre sıralandırılırlar.<br><br>   </p>
+				<br>
+				<br>
+                            <p>PiWars, İngiltere Cambridge Üniversitesinde son 4 yıldır düzenlenen uluslararası bir robotik yarışmasıdır. Bu yarışmada katılımcılar Raspberry Pi kullanarak mobil robotlar üretirler. Robotlar yarışmadaki hem otonom hem de uzaktan kumandalı çeşitli görevleri tamamlayarak puan kazanır ve buna göre sıralandırılırlar.</p>
 			    
                         </div>
                     </div>
@@ -172,8 +174,9 @@ http://www.templatemo.com/tm-508-power
                                 <img src="img/first-service-icon.png" alt=""> <!-- PiWars Türkiye adlı başlığın üstündeki resim -->
                             </div>
                             <h4>PİWars Türkiye</h4>
-                            <p>Hisar CS takımı PiWars etkinliğini İstanbul’a getirerek Türkiye'deki ilk PiWars etkinliğini düzenleyecektir. Yarışma 23 mart tarihinde Hisar Okulları lise binasında gerçekleşecek ve Türkiye çevresinden bütün liselerin katılımına açık olacaktır.
-                                <br><br><br></p>
+				<br>
+				<br>
+                            <p>Hisar CS takımı PiWars etkinliğini İstanbul’a getirerek Türkiye'deki ilk PiWars etkinliğini düzenleyecektir. Yarışma 23 mart tarihinde Hisar Okulları lise binasında gerçekleşecek ve Türkiye çevresinden bütün liselerin katılımına açık olacaktır.</p>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -182,7 +185,9 @@ http://www.templatemo.com/tm-508-power
                                 <img src="img/third-service-icon.png" alt=""> <!-- Eğitim adlı başlığın üstündeki resim -->
                             </div>
                             <h4>Eğitim</h4>
-                            <p>PiWars Türkiye etkinliği, yarışmanın yanı sıra bir de eğitim içerecektir. 2 gün sürecek olan eğitimde, yeterli imkanları olmayan okullardan gelen öğrencilere gerekli malzeme sağlanacak ve kendi robotlarını yapmalarına yardım edilecektir. Eğitime katılan takımlar daha sonra yaptıkları robotlarla yarışmaya katılacaktır.<br><br>  </p>
+				<br>
+				<br>
+                            <p>PiWars Türkiye etkinliği, yarışmanın yanı sıra bir de eğitim içerecektir. 2 gün sürecek olan eğitimde, yeterli imkanları olmayan okullardan gelen öğrencilere gerekli malzeme sağlanacak ve kendi robotlarını yapmalarına yardım edilecektir. Eğitime katılan takımlar daha sonra yaptıkları robotlarla yarışmaya katılacaktır.</p>
                         </div>
                     </div> 
                 </div>
