--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@ http://www.templatemo.com/tm-508-power
                 <td id="sec"></td>
             </tr>
             <tr>
-                <td>Days</td>
-                <td>Hours</td>
-                <td>Minutes</td>
-                <td>Seconds</td>
+                <td><font size="6"><b><div class="day">Days</div></b></font></td>
+                <td><font size="6"><b><div class="day">Hours</div></b></font></td>
+                <td><font size="6"><b><div class="day">Minutes</div></b></font></td>
+                <td><font size="6"><b><div class="day">Seconds</div></b></font></td>
             </tr>
             
         </table>
